--- a/all.css
+++ b/all.css
@@ -63,7 +63,7 @@ img{
     line-height: 75px;
 }
 .header .title h1 a{
-    background-image: url(/images/logo.png);
+    background-image: url(images/logo.png);
     background-repeat: no-repeat;
     display: block;
     width: 350px;
