--- a/all.css
+++ b/all.css
@@ -62,6 +62,33 @@ img{
     justify-content: space-between;
     line-height: 75px;
 }
+.header .fa-solid{
+    display: none;
+}
+@media(max-width:1050px){
+    .header{
+        position: relative;
+    }
+    .header .subTitle{
+        display: flex;
+        flex-direction: column;
+        /* 隱藏選單 */
+        display: none;
+        z-index: 10;
+        margin-top: 1.5em;
+        margin-right: 4em;
+        position: absolute;
+        right: 0;
+        background-color: rgb(243,243,243);
+    }
+    .header .fa-solid{
+        font-size: 30px;
+        margin-top: 0.8em;
+        margin-right: 0.8em;
+        display: block;
+        cursor: pointer;
+    }
+}
 .header .title h1 a{
     background-image: url(images/logo.png);
     background-repeat: no-repeat;
@@ -74,15 +101,43 @@ img{
     margin-top: 1em;
     margin-left: 0.5em;
 }
+@media (max-width:550px){
+    .header .title h1 a{
+        background-image: url(images/logo280.png);
+    }
+}
 .header .subTitle span{
     margin-left: 0.5em;
     margin-right: 1.5em;
     font-weight: 900;
     letter-spacing: 2px;
 }
+@media(max-width:1050px){
+    .header .subTitle span{
+        height: 50px;
+        display: flex;
+        align-items: center;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .header .subTitle span:hover{
+        background-color: rgb(188,143,143);
+        color: #fff;
+    }
+}
 .header .subTitle span a{
     text-decoration: none;
     color: #000;
+}
+@media(max-width:1050px){
+    .header .subTitle span a{
+        width: 100%;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
+    }
+    .header .subTitle span a:hover{
+        color: rgb(243,243,243);
+    }
 }
 .header .subTitle .pageColor a{
     color: rgb(188,143,143);
@@ -99,6 +154,16 @@ img{
 .secondContainer .notice{
     margin-top: 16em;
 }
+@media (max-width:680px){
+    .secondContainer .notice{
+        margin-top: 10em;
+    }
+}
+@media (max-width:501px){
+    .secondContainer .notice{
+        margin-top: 6em;
+    }
+}
 .secondContainer .notice .noticeTitle{
     display: flex;
     position: relative;
@@ -110,6 +175,18 @@ img{
     position: absolute;
     top: -21px;
 }
+@media (max-width:680px){
+    .secondContainer .notice .noticeTitle span{
+        font-size: 30px;
+        top: -10px;
+        left: 10px;
+    }
+}
+@media (max-width:501px){
+    .secondContainer .notice .noticeTitle span{
+        font-size: 20px;
+    }
+}
 .secondContainer .notice .noticeTitle .upLine{
     width: 82.5%;
     height: 5px;
@@ -117,6 +194,11 @@ img{
     background-color: rgb(243,243,243);
     position: absolute;
     right: 0;
+}
+@media (max-width:860px){
+    .secondContainer .notice .noticeTitle .upLine{
+        display: none;
+    }
 }
 .secondContainer .notice .downLine{
     width: 100%;
@@ -130,6 +212,11 @@ img{
     margin-top: 2em;
     margin-left: 5em;
     margin-right: 1em;
+}
+@media (max-width:501px){
+    .secondContainer .notice .noticeContent{
+        font-size: 13px;
+    }
 }
 .secondContainer .notice .noticeContent .noticeContentOne{
     margin-top: 3em;
@@ -145,18 +232,30 @@ img{
     position: absolute;
     top: -235px;
     right: 80px;
-    width: 360px;
+    width: 40%;
+}
+@media (max-width:725px){
+    .secondContainer .indexPicBox .signImg{
+        right: 50px;
+        top: -228px;
+    }
+}
+@media (max-width:590px){
+    .secondContainer .indexPicBox .signImg{
+        right: 40px;
+        top: -223px;
+    }
 }
 .secondContainer .indexPicBox .indexBig{
     position: absolute;
-    width: 630px;
+    width: 70%;
     top: -200px;
 }
 .secondContainer .indexPicBox .qrCodeBox{
     position: absolute;
     right: 0;
     top: -170px;
-    width: 330px;
+    width: 40%;
     background-color: rgb(243,243,243);
     display: flex;
     flex-direction: column;
@@ -168,25 +267,64 @@ img{
     letter-spacing: 5px;
     padding-top: 1em;
 }
+@media (max-width:900px){
+    .secondContainer .indexPicBox .qrCodeBox .orderTitle{
+        font-size: 18px;
+    }
+}
+@media (max-width:660px){
+    .secondContainer .indexPicBox .qrCodeBox .orderTitle{
+        font-size: 14px;
+    }
+}
 .secondContainer .indexPicBox .qrCodeBox .orderLine{
     width: 100px;
     height: 5px;
     border: none;
     background-color: rgb(188,143,143);
-    margin-top: 15px;
+    margin-top: 20px;
+}
+@media (max-width:900px){
+    .secondContainer .indexPicBox .qrCodeBox .orderLine{
+        height: 2px;
+        margin-top: 10px;
+        width: 60px;
+    }
+}
+@media (max-width:660px){
+    .secondContainer .indexPicBox .qrCodeBox .orderLine{
+        height: 2px;
+        margin-top: 8px;
+        width: 60px;
+    }
 }
 .secondContainer .indexPicBox .qrCodeBox .joinText{
     color: rgb(128,128,128);
     font-size: 14px;
     margin-bottom: 5px;
 }
+@media (max-width:900px){
+    .secondContainer .indexPicBox .qrCodeBox .joinText{
+        font-size: 10px;
+    }
+}
 .secondContainer .indexPicBox .qrCodeBox img{
-    width: 280px;
+    width: 80%;
 }
 .secondContainer .indexPicBox .qrCodeBox .lineidText{
     color: rgb(128,128,128);
     margin-top: 10px;
     margin-bottom: 5px;
+}
+@media (max-width:900px){
+    .secondContainer .indexPicBox .qrCodeBox .lineidText{
+        font-size: 14px;
+    }
+}
+@media (max-width:660px){
+    .secondContainer .indexPicBox .qrCodeBox .lineidText{
+        font-size: 10px;
+    }
 }
 .secondContainer .mapBox{
     display: flex;
@@ -204,6 +342,11 @@ img{
     justify-content: space-between;
     align-items: center;
 }
+@media (max-width:725px){
+    .footer .imgBox{
+        flex-direction: column;
+    }
+}
 .footer .imgBox img{
     width: 450px;
 }
@@ -214,6 +357,11 @@ img{
     margin-top: 1em;
     margin-left: 3.5em;
 }
+@media (max-width:725px){
+    .footer .informationBox{
+        margin-left: 5em;
+    }
+}
 .footer .informationBoxiconBox{
     display: flex;
     justify-content: space-between;
@@ -222,6 +370,11 @@ img{
     color: rgb(243,243,243);
     margin-bottom: 1em;
 }
+@media (max-width:725px){
+    .footer .informationBoxiconBox .informationBox p{
+        font-size: 14px;
+    }
+}
 .footer .informationBoxiconBox .iconBox{
     width: 250px;
     display: flex;
@@ -229,8 +382,22 @@ img{
     align-items: end;
     margin-bottom: 1em;
 }
+@media (max-width:725px){
+    .footer .informationBoxiconBox .iconBox{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 0;
+    }
+}
 .footer .informationBoxiconBox .iconBox img{
     width: 50px;
+}
+@media (max-width:725px){
+    .footer .informationBoxiconBox .iconBox img{
+        width: 30px;
+        margin-bottom: 1em;
+    }
 }
 
 /* teacher.html */
@@ -402,7 +569,7 @@ img{
 .contentOne .contentBox .hiddenOne,.contentTwo .contentBox .hiddenTwo,.contentThree .contentBox .hiddenThree{
     display: none;
 }
-/* class1 */
+/* class1、class2、class3 */
 .classBoxContainer{
     display: flex;
     justify-content: center;
@@ -412,7 +579,7 @@ img{
     flex-direction: column;
     align-items: center;
     margin-top: 2em;
-    width: 900px;
+    width: 100%;
 }
 .classOneBox p{
     font-size: 25px;
@@ -555,7 +722,7 @@ img{
     align-items: center;
 }
 .schoolTimetable{
-    width: 900px;
+    max-width: 900px;
     margin-top: 1em;
 }
 .schoolTimetable p{
@@ -629,7 +796,7 @@ img{
     letter-spacing: 10px;
 }
 .courseOrder{
-    width: 900px;
+    max-width: 900px;
     margin-top: 1em;
 }
 .courseOrder p{
