--- a/all.css
+++ b/all.css
@@ -57,45 +57,22 @@ img{
 
 
 /* index.html */
+.container .fa-solid{
+    display: none;
+}
 .header{
     display: flex;
     justify-content: space-between;
-    line-height: 75px;
+    line-height: 100px;
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
+    z-index: 11;
 }
-.header .fa-solid{
-    display: none;
-}
-@media(max-width:1024px){
-    .header{
-        position: relative;
-    }
-    .header .subTitle{
-        display: flex;
-        flex-direction: column;
-        /* 隱藏選單 */
-        display: none;
-        z-index: 10;
-        margin-top: 1.5em;
-        margin-right: 4em;
-        position: absolute;
-        right: 0;
-        background-color: rgb(243,243,243);
-    }
-    .header .fa-solid{
-        font-size: 30px;
-        margin-top: 0.8em;
-        margin-right: 0.8em;
-        display: block;
-        cursor: pointer;
-    }
-}
-@media (max-width:320px){
-    .header .fa-solid{
-        font-size: 20px;
-        margin-top: 1.2em;
-        position: absolute;
-        right: 0;
-    }
+.container .header{
+    margin-top: -300px;
+    background-color: #fff;
+    z-index: 11;
 }
 .header .title h1 a{
     background-image: url(images/logo.png);
@@ -109,57 +86,15 @@ img{
     margin-top: 1em;
     margin-left: 0.5em;
 }
-@media (max-width:320px){
-    .header .title h1 a{
-        background-image: url(images/logo200.png);
-    }
-}
 .header .subTitle span{
     margin-left: 0.5em;
     margin-right: 1.5em;
     font-weight: 900;
     letter-spacing: 2px;
 }
-@media(max-width:1024px){
-    .header .subTitle span{
-        height: 50px;
-        display: flex;
-        align-items: center;
-        margin-left: 0;
-        margin-right: 0;
-    }
-    .header .subTitle span:hover{
-        background-color: rgb(188,143,143);
-        color: #fff;
-    }
-}
-@media(max-width:320px){
-    .header .subTitle{
-        margin-right: 15px;
-        margin-top: 45px;
-    }
-    .header .subTitle span{
-        height: 25px;
-    }
-}
 .header .subTitle span a{
     text-decoration: none;
     color: #000;
-}
-@media(max-width:1024px){
-    .header .subTitle span a{
-        width: 100%;
-        padding-left: 0.5em;
-        padding-right: 0.5em;
-    }
-    .header .subTitle span a:hover{
-        color: rgb(243,243,243);
-    }
-}
-@media(max-width:320px){
-    .header .subTitle span a{
-        font-size: 8px;
-    }
 }
 .header .subTitle .pageColor a{
     color: rgb(188,143,143);
@@ -171,51 +106,25 @@ img{
     width: 100%;
     margin-top: 300px;
 }
-@media(max-width:320px){
-    .secondContainerBox{
-        margin-top: 150px;
-    }
-}
-.secondContainer{
+.ContainerBc128{
     width: 900px;
+    margin-top: 120px;
 }
-@media(max-width:320px){
-    .secondContainer{
-        width: 100%;
-    }
-}
-.secondContainer .notice{
+.ContainerBc128 .notice{
     margin-top: 16em;
 }
-@media(max-width:320px){
-    .secondContainer .notice{
-        margin-top: 8em;
-    }
-}
-.secondContainer .notice .noticeTitle{
+.ContainerBc128 .notice .noticeTitle{
     display: flex;
     position: relative;
 }
-.secondContainer .notice .noticeTitle span{
+.ContainerBc128 .notice .noticeTitle span{
     color: rgb(243,243,243);
     font-size: 35px;
     letter-spacing: 4px;
     position: absolute;
     top: -21px;
 }
-@media (max-width:720px){
-    .secondContainer .notice .noticeTitle span{
-        font-size: 26px;
-        top: -16px;
-    }
-}
-@media (max-width:720px){
-    .secondContainer .notice .noticeTitle span{
-        font-size: 18px;
-        top: -8px;
-    }
-}
-.secondContainer .notice .noticeTitle .upLine{
+.ContainerBc128 .notice .noticeTitle .upLine{
     width: 82.5%;
     height: 5px;
     border: none;
@@ -223,92 +132,41 @@ img{
     position: absolute;
     right: 0;
 }
-@media (max-width:720px){
-    .secondContainer .notice .noticeTitle .upLine{
-        height: 3px;
-    }
-}
-@media (max-width:320px){
-    .secondContainer .notice .noticeTitle .upLine{
-        height: 1.5px;
-        width: 72%;
-    }
-}
-.secondContainer .notice .downLine{
+.ContainerBc128 .notice .downLine{
     width: 100%;
     height: 5px;
     border: none;
     background-color: rgb(243,243,243);
     margin-top: 2em;
 }
-.secondContainer .notice .noticeContent p{
+.ContainerBc128 .notice .noticeContent p{
     color: rgb(243,243,243);
     margin-top: 2em;
     margin-left: 5em;
     margin-right: 1em;
 }
-@media (max-width:720px){
-    .secondContainer .notice .noticeContent p{
-        font-size: 14px;
-    }
-}
-@media (max-width:320px){
-    .secondContainer .notice .noticeContent p{
-        font-size: 10px;
-        margin-left: 2em;
-        line-height: 12px;
-    }
-}
-.secondContainer .notice .noticeContent .noticeContentOne{
+.ContainerBc128 .notice .noticeContent .noticeContentOne{
     margin-top: 3em;
 }
-.secondContainer .notice .noticeContent span{
+.ContainerBc128 .notice .noticeContent span{
     color: rgb(243,243,243);
     margin-left: 6em;
 }
-@media (max-width:720px){
-    .secondContainer .notice .noticeContent span{
-        font-size: 14px;
-    }
-}
-@media (max-width:320px){
-    .secondContainer .notice .noticeContent span{
-        font-size: 10px;
-        margin-left: 2em;
-    }
-}
-.secondContainer .indexPicBox{
+.ContainerBc128 .indexPicBox{
     position: relative;
 }
-.secondContainer .indexPicBox .signImg{
+.ContainerBc128 .indexPicBox .signImg{
     position: absolute;
     top: -235px;
     right: 80px;
     width: 40%;
 }
-@media (max-width:720px){
-    .secondContainer .indexPicBox .signImg{
-        right: 60px;
-        top: -228px;
-    }
-}
-@media (max-width:320px){
-    .secondContainer .indexPicBox .signImg{
-        right: 25px;
-        top: -105px;
-    }
-}
-.secondContainer .indexPicBox .indexBig{
+.ContainerBc128 .indexPicBox .indexBig{
     position: absolute;
     width: 70%;
     top: -200px;
 }
-@media(max-width:320px){
-    .secondContainer .indexPicBox .indexBig{
-        top: -90px;
-    }
-}
-.secondContainer .indexPicBox .qrCodeBox{
+.ContainerBc128 .indexPicBox .qrCodeBox{
     position: absolute;
     right: 0;
     top: -170px;
@@ -318,160 +176,68 @@ img{
     flex-direction: column;
     align-items: center;
 }
-@media(max-width:320px){
-    .secondContainer .indexPicBox .qrCodeBox{
-        top: -70px;
-    }
-}
-.secondContainer .indexPicBox .qrCodeBox .orderTitle{
+.ContainerBc128 .indexPicBox .qrCodeBox .orderTitle{
     color: rgb(128,128,128);
     font-size: 23px;
     letter-spacing: 5px;
     padding-top: 1em;
 }
-@media (max-width:720px){
-    .secondContainer .indexPicBox .qrCodeBox .orderTitle{
-        font-size: 16px;
-    }
-}
-@media (max-width:320px){
-    .secondContainer .indexPicBox .qrCodeBox .orderTitle{
-        font-size: 8px;
-        letter-spacing: 1px;
-    }
-}
-.secondContainer .indexPicBox .qrCodeBox .orderLine{
+.ContainerBc128 .indexPicBox .qrCodeBox .orderLine{
     width: 100px;
     height: 5px;
     border: none;
     background-color: rgb(188,143,143);
     margin-top: 20px;
 }
-@media (max-width:720px){
-    .secondContainer .indexPicBox .qrCodeBox .orderLine{
-        height: 3px;
-    }
-}
-@media (max-width:320px){
-    .secondContainer .indexPicBox .qrCodeBox .orderLine{
-        height: 1.5px;
-        width: 50px;
-        margin-top: 10px;
-    }
-}
-.secondContainer .indexPicBox .qrCodeBox .joinText{
+.ContainerBc128 .indexPicBox .qrCodeBox .joinText{
     color: rgb(128,128,128);
     font-size: 14px;
     margin-bottom: 5px;
 }
-@media (max-width:720px){
-    .secondContainer .indexPicBox .qrCodeBox .joinText{
-        font-size: 10px;
-    }
-}
-@media (max-width:320px){
-    .secondContainer .indexPicBox .qrCodeBox .joinText{
-        font-size: 6px;
-    }
-}
-.secondContainer .indexPicBox .qrCodeBox img{
+.ContainerBc128 .indexPicBox .qrCodeBox img{
     width: 80%;
 }
-.secondContainer .indexPicBox .qrCodeBox .lineidText{
+.ContainerBc128 .indexPicBox .qrCodeBox .lineidText{
     color: rgb(128,128,128);
     margin-top: 10px;
     margin-bottom: 5px;
 }
-@media (max-width:720px){
-    .secondContainer .indexPicBox .qrCodeBox .lineidText{
-        font-size: 10px;
-    }
-}
-@media (max-width:320px){
-    .secondContainer .indexPicBox .qrCodeBox .lineidText{
-        font-size: 6px;
-        margin-top: 5px;
-    }
-}
-.secondContainer .mapBox{
+.ContainerBc128 .mapBox{
     display: flex;
     justify-content: center;
     margin-top: 1.5em;
 }
-.secondContainer .mapBox img{
+.ContainerBc128 .mapBox img{
     width: 75%;
-}
-@media (max-width:320px){
-    .secondContainer .mapBox img{
-        width: 80%;
-    }
 }
 .footer{
     margin-top: 2em;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
 }
 .footer .imgBox{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-}
-@media (max-width:720px){
-    .footer .imgBox{
-        flex-direction: column;
-    }
-}
-@media (max-width:320px){
-    .footer .imgBox{
-        flex-direction: row;
-    }
 }
 .footer .imgBox img{
     width: 450px;
 }
-@media(max-width:320px){
-    .footer .imgBox img{
-        width: 60%;
-    }
-}
 .footer .imgBox .searchImg{
     width: 250px;
-}
-@media(max-width:320px){
-    .footer .imgBox .searchImg{
-        width: 25%;
-        margin-right: 0.5em;
-    }
 }
 .footer .informationBox{
     margin-top: 1em;
     margin-left: 3.5em;
 }
-@media (max-width:720px){
-    .footer .informationBox{
-        margin-left: 5em;
-    }
-}
-@media (max-width:320px){
-    .footer .informationBox{
-        margin-left: 2em;
-    }
-}
 .footer .informationBoxiconBox{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .footer .informationBoxiconBox .informationBox p{
     color: rgb(243,243,243);
     margin-bottom: 1em;
-}
-@media (max-width:720px){
-    .footer .informationBoxiconBox .informationBox p{
-        font-size: 14px;
-    }
-}
-@media(max-width:320px){
-    .footer .informationBoxiconBox .informationBox p{
-        font-size: 8px;
-    }
 }
 .footer .informationBoxiconBox .iconBox{
     width: 250px;
@@ -480,43 +246,13 @@ img{
     align-items: end;
     margin-bottom: 1em;
 }
-@media (max-width:720px){
-    .footer .informationBoxiconBox .iconBox{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 0;
-    }
-}
-@media (max-width:320px){
-    .footer .informationBoxiconBox .iconBox{
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-bottom: 0;
-        width: 100px;
-        margin-top: 1em;
-    }
-}
 .footer .informationBoxiconBox .iconBox img{
     width: 50px;
-}
-@media (max-width:720px){
-    .footer .informationBoxiconBox .iconBox img{
-        width: 30px;
-        margin-bottom: 1em;
-    }
-}
-@media (max-width:320px){
-    .footer .informationBoxiconBox .iconBox img{
-        width: 20px;
-        margin-bottom: 1em;
-    }
 }
 
 /* teacher.html */
 .introduceTitle{
-    margin-top: 3em;
+    margin-top: 120px;
 }
 .introduceTitle p{
     text-align: center;
@@ -625,7 +361,24 @@ img{
 }
 .contentContainer{
     width: 900px;
-    margin-top: 3em;
+    margin-top: 120px;
+    border-left: 5px solid rgb(182,182,182);
+    padding-left: 2em;
+    position: relative;
+}
+.contentContainer .year2024{
+    color: rgb(182,182,182);
+    font-size: 28px;
+    font-weight: 900;
+    margin-bottom: 2em;
+    letter-spacing: 2px;
+    position: absolute;
+    left: -5em;
+}
+.contentContainer .year2024 hr,.contentContainer .year2023 hr{
+    height: 5px;
+    border: none;
+    background-color: rgb(182,182,182);
 }
 .contentOne,.contentTwo,.contentThree{
     margin-bottom: 5em;
@@ -648,7 +401,7 @@ img{
     padding-left: 13em;
 }
 .contentOne .contentHr,.contentTwo .contentHr,.contentThree .contentHr{
-    height: 3px;
+    height: 1px;
     background-color: rgb(188,143,143);
     border: none;
 }
@@ -692,7 +445,7 @@ img{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2em;
+    margin-top: 120px;
     width: 100%;
 }
 .classOneBox p{
@@ -798,6 +551,7 @@ img{
     letter-spacing: 3px;
 }
 .classOneBox .allContent{
+    width: 900px;
     padding-right: 2em;
     padding-top: 3em;
 }
@@ -838,6 +592,7 @@ img{
 .schoolTimetable{
     max-width: 900px;
     margin-top: 1em;
+    margin-top: 120px;
 }
 .schoolTimetable p{
     text-align: center;
@@ -892,7 +647,7 @@ img{
 .schoolTimetable table .dateContent{
     width: 180px;
     height: 50px;
-    line-height: 50px;
+    line-height: 30px;
     color: rgb(188,143,143);
 }
 .schoolTimetable table .dateContent p{
@@ -906,20 +661,20 @@ img{
     padding-right: 3px;
 }
 .schoolTimetable table .dateContent span{
-    font-size: 18px;
-    letter-spacing: 10px;
+    font-size: 14px;
+    letter-spacing: 2px;
 }
-.courseOrder{
-    max-width: 900px;
-    margin-top: 1em;
+.courseOrder,.classCaption{
+    width: 900px;
+    margin-top: 4em;
 }
-.courseOrder p{
+.courseOrder p,.classCaption p{
     text-align: center;
     font-size: 25px;
     font-weight: 900;
     letter-spacing: 3px;
 }
-.courseOrder .pTitleHr{
+.courseOrder .pTitleHr,.classCaption .pTitleHr{
     width: 53px;
     height: 5px;
     background-color: rgb(188,143,143);
@@ -927,17 +682,46 @@ img{
 }
 .courseOrder .orderBoxContentAndHr{
     display: flex;
+    align-items: center;
     margin-top: 3em;
     margin-bottom: 1em;
+    position: relative;
+}
+.courseOrder .orderBoxContentAndHr .eyeOneContent{
+    position: absolute;
+    background-color: #fff;
+    right: 0;
+    width: 70%;
+    height: 300px;
+    overflow: scroll;
+    color: rgb(128,128,128);
+    border: 5px groove;
+    padding: 0.8em;
+    display: none;
+}
+.courseOrder .orderBoxContentAndHr .eyeOneContent p{
+    font-size: 14px;
+    line-height: 16px;
 }
 .courseOrder .orderBoxContentAndHr p{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: normal;
     color: rgb(188,143,143);
+    text-align: left;
+}
+.courseOrder .orderBoxContentAndHr p a{
+    text-decoration: none;
+    color: rgb(188,143,143);
+}
+.courseOrder .orderBoxContentAndHr .sTitle{
+    font-size: 14px;
+    margin-left: 6em;
+    margin-top: 0.5em;
+    cursor: pointer;
 }
 .courseOrder .orderBox .orderBoxContentAndHr hr{
-    width: 500px;
-    height: 3px;
+    width: 50%;
+    height: 1px;
     border: none;
     background-color: rgb(188,143,143);
 }
@@ -949,18 +733,19 @@ img{
 }
 .courseOrder .orderBoxContent p{
     text-align: left;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: normal;
     margin-bottom: 0.5em;
-    padding-left: 2em;
+    padding-left: 3.5em;
 }
 .courseOrder .orderBoxContent p a{
-    font-size: 20px;
+    font-size: 14px;
+    font-weight: 900;
     text-decoration: none;
     color: rgb(188,143,143);
 }
 .courseOrder .orderBox .bottomHr{
-    height: 3px;
+    height: 1px;
     background-color: rgb(188,143,143);
     border: none;
     margin-top: 1em;
